force-app/main/default/objects/Opportunity/fields/Delinquent_Payer_Termination__c.field-meta.xml
<CustomField>
    <fullName>Delinquent_Payer_Termination__c</fullName>
    <description>This field needs to appear on a report that compliance runs annually.
 
The default answer would be No unless Yes is selected by Accounting folks. If yes, is selected, the client didnt pay their final term/decon fees and no final filings will be prepared.</description>
    <inlineHelpText>The default answer would be No unless Yes is selected by Accounting folks. If yes, is selected, the client didnt pay their final term/decon fees and no final filings will be prepared</inlineHelpText>
    <label>Delinquent Payer Termination</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>YES</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>