force-app/main/default/objects/Opportunity/fields/Desired_Plan_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Plan_Start_Date__c</fullName>
    <description>When does the client want their plan to start?</description>
    <inlineHelpText>When does the client want their plan to start?</inlineHelpText>
    <label>Desired Plan Start Date</label>
    <type>Date</type>
</CustomField>