force-app/main/default/objects/Opportunity/fields/Discount_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discount_Notes__c</fullName>
    <description>Any pertinent notes on discount being given.</description>
    <inlineHelpText>Any pertinent notes on discount being given.</inlineHelpText>
    <label>Discount Notes</label>
    <type>TextArea</type>
</CustomField>