force-app/main/default/objects/Opportunity/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Enter Discount as a Percentage of total fee</description>
    <inlineHelpText>Enter Discount as a Percentage of total fee</inlineHelpText>
    <label>Discount Percentage</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>