force-app/main/default/objects/Opportunity/fields/Discretionary_Match__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match__c</fullName>
    <description>Is the Decision Maker considering a Discretionary Match</description>
    <inlineHelpText>Is the Decision Maker considering a Discretionary Match</inlineHelpText>
    <label>Discretionary Match</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>