force-app/main/default/objects/Opportunity/fields/Discretionary_Match_Notes__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match_Notes__c</fullName>
    <description>Potential formula discussed with decision maker</description>
    <inlineHelpText>Potential formula discussed with decision maker</inlineHelpText>
    <label>Discretionary Match Formula/Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>