force-app/main/default/objects/Opportunity/fields/Discretionary_Match_Vesting_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Discretionary_Match_Vesting_Schedule__c</fullName>
    <description>When are Discretionary Matching contributions vested to participants?</description>
    <inlineHelpText>When are Discretionary Matching contributions vested to participants?</inlineHelpText>
    <label>Discretionary Match Vesting Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Vesting_schedule</valueSetName>
    </valueSet>
</CustomField>