force-app/main/default/objects/Opportunity/fields/Distribution__c.field-meta.xml
<CustomField>
    <fullName>Distribution__c</fullName>
    <description>1 = No ability to distribute 401(k)
5 = Wholesaling force and/or moderate digital distribution infrastructure in place. Some proven experience selling small-businesses
10 = Intensive wholesaling force. Comprehensive digital distribution. Proven ability</description>
    <inlineHelpText>1 = No ability to distribute 401(k)
5 = Wholesaling force and/or moderate digital distribution infrastructure in place. Some proven experience selling small-businesses
10 = Intensive wholesaling force. Comprehensive digital distribution. Proven ability</inlineHelpText>
    <label>Distribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>