force-app/main/default/objects/Opportunity/fields/Document_Pre_Approval_Completed__c.field-meta.xml
<CustomField>
    <fullName>Document_Pre_Approval_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Document Pre-Approval Completed</label>
    <type>Checkbox</type>
</CustomField>