force-app/main/default/objects/Opportunity/fields/EIN__c.field-meta.xml
<CustomField>
    <fullName>EIN__c</fullName>
    <description>Used for Validation Rules</description>
    <formula>Account.Employer_Identification_Number_EIN__c</formula>
    <inlineHelpText>Must be edited on the account object.</inlineHelpText>
    <label>EIN</label>
    <type>Text</type>
</CustomField>