force-app/main/default/objects/Opportunity/fields/Employee_Referral_Paid__c.field-meta.xml
<CustomField>
    <fullName>Employee_Referral_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee Referral Paid</label>
    <type>Checkbox</type>
</CustomField>