force-app/main/default/objects/Opportunity/fields/Employee_Referrer__c.field-meta.xml
<CustomField>
    <fullName>Employee_Referrer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Referrer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>