force-app/main/default/objects/Opportunity/fields/Enhanced_Payroll_Services_Type__c.field-meta.xml
<CustomField>
    <fullName>Enhanced_Payroll_Services_Type__c</fullName>
    <description>Level of EPS Services purchased</description>
    <inlineHelpText>Level of EPS Services purchased</inlineHelpText>
    <label>Enhanced Payroll Services Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Payroll</fullName>
            </value>
            <value>
                <fullName>Payroll + Census</fullName>
                <default>true</default>
                <label>Payroll + Census</label>
            </value>
            <value>
                <fullName>Deferral + Loans</fullName>
            </value>
            <value>
                <fullName>Payroll + Census + Deferral + Loans</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>