force-app/main/default/objects/Opportunity/fields/Estimated_Hours_Needed__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Hours_Needed__c</fullName>
    <description>Estimated number of hours needed to complete the project.</description>
    <inlineHelpText>Estimated number of hours needed to complete the project.</inlineHelpText>
    <label>Estimated Hours Needed</label>
    <precision>6</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>