force-app/main/default/objects/Opportunity/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>Used by the Jitterbit integration and holds the NetSuite Id for the corresponding NS Opportunity</description>
    <externalId>true</externalId>
    <label>NetSuite Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>