force-app/main/default/objects/Opportunity/fields/Forecast__c.field-meta.xml
<CustomField>
    <fullName>Forecast__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>What forecast does this opportunity fall into?</description>
    <inlineHelpText>What forecast does this opportunity fall into?</inlineHelpText>
    <label>Forecast</label>
    <referenceTo>Forecast__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>