force-app/main/default/objects/Opportunity/fields/Fund_List__c.field-meta.xml
<CustomField>
    <fullName>Fund_List__c</fullName>
    <label>Fund List</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Service_Option__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Carbon Collective Fund List 1</fullName>
            </value>
            <value>
                <fullName>Carbon Collective Fund List 2</fullName>
            </value>
            <value>
                <fullName>CensiblyYours</fullName>
            </value>
            <value>
                <fullName>COTA St</fullName>
            </value>
            <value>
                <fullName>Custom List</fullName>
            </value>
            <value>
                <fullName>Envestnet</fullName>
            </value>
            <value>
                <fullName>ESG</fullName>
            </value>
            <value>
                <fullName>Fidelity / Vanguard</fullName>
            </value>
            <value>
                <fullName>Fidelity Extended</fullName>
            </value>
            <value>
                <fullName>Fidelity Index</fullName>
            </value>
            <value>
                <fullName>flexPATH</fullName>
            </value>
            <value>
                <fullName>FPR</fullName>
            </value>
            <value>
                <fullName>FPR ETF</fullName>
            </value>
            <value>
                <fullName>Globalt I-Shares</fullName>
            </value>
            <value>
                <fullName>GRP</fullName>
            </value>
            <value>
                <fullName>Intuit Morningstar List</fullName>
            </value>
            <value>
                <fullName>JPM R2 SmartRetirement</fullName>
            </value>
            <value>
                <fullName>JPM R2 Smart Retirement Blend</fullName>
            </value>
            <value>
                <fullName>JPM R3 SmartRetirement</fullName>
            </value>
            <value>
                <fullName>JPM R3 Smart Retirement Blend</fullName>
            </value>
            <value>
                <fullName>JPM R4 SmartRetirement</fullName>
            </value>
            <value>
                <fullName>JPM R4 Smart Retirement Blend</fullName>
            </value>
            <value>
                <fullName>JPM R5 SmartRetirement</fullName>
            </value>
            <value>
                <fullName>JPM R5 Smart Retirement Blend</fullName>
            </value>
            <value>
                <fullName>JPM R6 SmartRetirement</fullName>
            </value>
            <value>
                <fullName>JPM R6 Smart Retirement Blend</fullName>
            </value>
            <value>
                <fullName>Loring Ward &amp;#150; Plan B</fullName>
            </value>
            <value>
                <fullName>Loring Ward Custom Fund List</fullName>
            </value>
            <value>
                <fullName>Matrix DFA Long List</fullName>
            </value>
            <value>
                <fullName>Matrix Reg Rep List Choice 50bps</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>