force-app/main/default/objects/Opportunity/fields/Funding__c.field-meta.xml
<CustomField>
    <fullName>Funding__c</fullName>
    <description>1 = 401(k) severely underfunded. Little to no budget for small business 401(k).
5 = Budget available; argument need be made.
10 = Rich, allocated budget for small-business sales, marketing, operations, and integrations.</description>
    <inlineHelpText>1 = 401(k) severely underfunded. Little to no budget for small business 401(k).
5 = Budget available; argument need be made.
10 = Rich, allocated budget for small-business sales, marketing, operations, and integrations.</inlineHelpText>
    <label>Funding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>