force-app/main/default/objects/Opportunity/fields/GCLID_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>GCLID_Deprecated__c</fullName>
    <description>Do Not Use</description>
    <label>GCLID- Deprecated</label>
    <length>255</length>
    <type>Text</type>
</CustomField>