force-app/main/default/objects/Opportunity/fields/Hardships__c.field-meta.xml
<CustomField>
    <fullName>Hardships__c</fullName>
    <description>Will hardships be allowed on the plan?</description>
    <inlineHelpText>Will hardships be allowed on the plan?</inlineHelpText>
    <label>Hardships</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>