force-app/main/default/objects/Opportunity/fields/Hours_Discounted__c.field-meta.xml
<CustomField>
    <fullName>Hours_Discounted__c</fullName>
    <description>Effective # of hours discounted - auto-calculated based on Amount before/after discount and hourly rate</description>
    <formula>( Amount_Before_Discount__c -  Amount ) /  Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Effective # of hours discounted - auto-calculated based on Amount before/after discount and hourly rate</inlineHelpText>
    <label>Hours Discounted</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>