force-app/main/default/objects/Opportunity/fields/How_did_you_hear_about_Ubiquity__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_hear_about_Ubiquity__c</fullName>
    <description>Confirm how prospects heard about Ubiquity</description>
    <inlineHelpText>Confirm how prospects heard about Ubiquity</inlineHelpText>
    <label>How did you hear about Ubiquity?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web/ Search Engine</fullName>
            </value>
            <value>
                <fullName>Google Ads</fullName>
            </value>
            <value>
                <fullName>Postcard</fullName>
            </value>
            <value>
                <fullName>Financial Advisor</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Simply Retirement</fullName>
            </value>
            <value>
                <fullName>Marketing Email Campaign (Vets, SH, Secure Act, etc.)</fullName>
            </value>
            <value>
                <fullName>News/PR</fullName>
            </value>
            <value>
                <fullName>Facebook/LinkedIn/Social Media</fullName>
            </value>
            <value>
                <fullName>Referral from a personal friend/network</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>A post from a friend on social media</fullName>
                <isActive>false</isActive>
                <label>A post from a friend on social media</label>
            </value>
            <value>
                <fullName>Email</fullName>
                <isActive>false</isActive>
                <label>Email</label>
            </value>
            <value>
                <fullName>End of the Year campaign</fullName>
                <isActive>false</isActive>
                <label>End of the Year campaign</label>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
                <isActive>false</isActive>
                <label>LinkedIn</label>
            </value>
            <value>
                <fullName>Safe Harbor campaign</fullName>
                <isActive>false</isActive>
                <label>Safe Harbor campaign</label>
            </value>
            <value>
                <fullName>Secure Act campaign</fullName>
                <isActive>false</isActive>
                <label>Secure Act campaign</label>
            </value>
            <value>
                <fullName>Veterans campaign</fullName>
                <isActive>false</isActive>
                <label>Veterans campaign</label>
            </value>
            <value>
                <fullName>Word of mouth</fullName>
                <isActive>false</isActive>
                <label>Word of mouth</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>