force-app/main/default/objects/Opportunity/fields/Implementation_1st_Payroll_Date__c.field-meta.xml
<CustomField>
    <fullName>Implementation_1st_Payroll_Date__c</fullName>
    <inlineHelpText>1st Payroll Date from related Implementation record</inlineHelpText>
    <label>Implementation- 1st Payroll Date</label>
    <type>Date</type>
</CustomField>