force-app/main/default/objects/Opportunity/fields/Implementation__c.field-meta.xml
<CustomField>
    <fullName>Implementation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for automation mapping contacts to implementation.</description>
    <inlineHelpText>Used for automation mapping contacts to implementation.</inlineHelpText>
    <label>Implementation</label>
    <referenceTo>Implementation__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>