force-app/main/default/objects/Opportunity/fields/Implementation_Status__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Status__c</fullName>
    <formula>TEXT(Implementation__r.Implementation_Status__c) + &quot; - &quot; + TEXT(Implementation__r.Implementation_Stage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Implementation Status</label>
    <type>Text</type>
</CustomField>