force-app/main/default/objects/Opportunity/fields/Instructions_Sent__c.field-meta.xml
<CustomField>
    <fullName>Instructions_Sent__c</fullName>
    <label>Instructions Sent</label>
    <type>Date</type>
</CustomField>