force-app/main/default/objects/Opportunity/fields/Introduction_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Introduction_Email_Sent__c</fullName>
    <label>Introduction Email Sent</label>
    <type>Date</type>
</CustomField>