force-app/main/default/objects/Opportunity/fields/Intuit_Attempting_Initial_Contact__c.field-meta.xml
<CustomField>
    <fullName>Intuit_Attempting_Initial_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For Intuit Plans, a check in the box will default to the appropriate Opportunity stage.</description>
    <inlineHelpText>For Intuit Plans, a check in the box will default to the appropriate Opportunity stage.</inlineHelpText>
    <label>Intuit_Attempting_Initial_Contact</label>
    <type>Checkbox</type>
</CustomField>