force-app/main/default/objects/Opportunity/fields/IPP_Score__c.field-meta.xml
<CustomField>
    <fullName>IPP_Score__c</fullName>
    <description>Score 0-10 scale. 10 being the best scenario for Ubiquity, and 1 being the worst.</description>
    <formula>(VALUE( TEXT (Revenue_Opportunity__c )) + 
VALUE( TEXT (Distribution__c )) +
VALUE( TEXT (Product_Fit__c )) +
VALUE( TEXT (Funding__c )) +
VALUE( TEXT (Timing_to_Decision__c )))/5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Score 0-10 scale. 10 being the best scenario for Ubiquity, and 1 being the worst.</inlineHelpText>
    <label>IPP Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>