force-app/main/default/objects/Opportunity/fields/Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Lead_ID__c</fullName>
    <description>Lead ID mapped from originating Lead for purpose of tracking through MC.</description>
    <inlineHelpText>Lead ID mapped from originating Lead for purpose of tracking through MC.</inlineHelpText>
    <label>Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>