force-app/main/default/objects/Opportunity/fields/Lead_to_Close_Time__c.field-meta.xml
<CustomField>
    <fullName>Lead_to_Close_Time__c</fullName>
    <description>Difference between close date and lead created date.</description>
    <formula>IF(ISNULL(Lead_Created_Date__c)=True,  (CloseDate-DATEVALUE(CreatedDate)),  (CloseDate - Lead_Created_Date__c))</formula>
    <inlineHelpText>Difference between close date and lead created date.</inlineHelpText>
    <label>Lead to Close Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>