force-app/main/default/objects/Opportunity/fields/Liquidation_date__c.field-meta.xml
<CustomField>
    <fullName>Liquidation_date__c</fullName>
    <label>Liquidation date</label>
    <type>Date</type>
</CustomField>