force-app/main/default/objects/Opportunity/fields/Login_Credentials_Received__c.field-meta.xml
<CustomField>
    <fullName>Login_Credentials_Received__c</fullName>
    <label>Login Credentials Received</label>
    <type>Date</type>
</CustomField>