force-app/main/default/objects/Opportunity/fields/Login_Credentials_Requested__c.field-meta.xml
<CustomField>
    <fullName>Login_Credentials_Requested__c</fullName>
    <label>Login Credentials Requested</label>
    <type>Date</type>
</CustomField>