force-app/main/default/objects/Opportunity/fields/LOI_Signed__c.field-meta.xml
<CustomField>
    <fullName>LOI_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOI Signed</label>
    <type>Checkbox</type>
</CustomField>