force-app/main/default/objects/Opportunity/fields/Lost_to_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Lost_to_Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Please enter the Competitor who won this opportunity. If you cannot find competitor please reach out to Product.</description>
    <inlineHelpText>Please enter the Competitor who won this opportunity. If you cannot find competitor please reach out to Product.</inlineHelpText>
    <label>Lost to Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities Won Over Ubiquity</relationshipLabel>
    <relationshipName>Opportunities_Won_From_Ubiquity</relationshipName>
    <type>Lookup</type>
</CustomField>